[Refactor] Improve the queryDSL about seller  and add comment [Issue no]